--- a/main.html
+++ b/main.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
 
     <title>اندريتو</title>
-</head>
-<body>
-    <h1> انا عبدالله  </h1>
-    <h1> انا علي </h1>
-</body>
+  </head>
+  <body>
+    <h1>انا عبدالله</h1>
+    <h1>انا علي</h1>
+    <h2>انا عبدااله الثاني</h2>
+  </body>
 </html>
