--- a/main.html
+++ b/main.html
@@ -9,9 +9,8 @@
     <h1>انا عبدالله</h1>
     <h1>انا علي</h1>
     <h2>انا عبدااله الثاني</h2>
-    <h2> انا علي الثاني</h2>
-    <h3>انا علي 3 </h3>
-    <h4>بببب</h4>
-     kjkj
+    <h2>انا علي الثاني</h2>
+    <h3>انا علي 3</h3>
+    <h4>هذي اخر اصدار رفعه عبدالله</h4>
   </body>
 </html>
