--- a/main.html
+++ b/main.html
@@ -2,7 +2,41 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <style>
+      body {
+        background-color: #c06969;
+        color: white;
+        text-align: center;
+      }
+      h1 {
+        color: yellow;
+      }
+      h2 {
+        color: blue;
+      }
+      h3 {
+        color: green;
+      }
+      h4 {
+        color: black;
+        background-color: white;
+        display: inline-block;
+        padding: 10px;
+        border-radius: 5px;
+        font-size: 20px;
+        font-weight: bold;
 
+        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+        margin-top: 20px;
+        font-family: "Arial", sans-serif;
+        border: 2px solid #000;
+        text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+        transition: transform 0.2s;
+      }
+      h4:hover {
+        transform: scale(1.05);
+      }
+    </style>
     <title>اندريتو</title>
   </head>
   <body>
