--- a/main.html
+++ b/main.html
@@ -37,7 +37,7 @@
         transform: scale(1.05);
       }
     </style>
-    <title>اندريتو</title>
+    <title>اندريتو لتصفح الالوان</title>
   </head>
   <body>
     <h1>انا عبدالله</h1>
@@ -46,5 +46,6 @@
     <h2>انا علي الثاني</h2>
     <h3>انا علي 3</h3>
     <h4>هذي اخر اصدار رفعه عبدالله</h4>
+    <p>نبا فكرة المشروع ازرار اذا ضغطت على الزر يحول لون الصفحة نفس لون الزر</p>
   </body>
 </html>
